--- a/index.html
+++ b/index.html
@@ -541,6 +541,8 @@
             <p>Cathron Paul<br />cathronpaul@gmail.com<br />+8763852299</p>
           </div>
     </div>
+    </footer>
+    </div>
   </body>
   <script src="https://kit.fontawesome.com/9f7e35fb17.js" crossorigin="anonymous"></script>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
